# cowallet

./: .dockerignore  .env.example  .env.prod.template  .gitignore  ANDROID_STRONGBOX_IMPLEMENTATION_SUMMARY.md  CLAUDE.md  Cargo.toml  DEPLOY.md  DOCKER.md  Dockerfile  FFI_IMPLEMENTATION_SUMMARY.md  FLUTTER_AUTH_DEBUG_GUIDE.md  FLUTTER_AUTH_DIAGNOSIS.md  IMPLEMENTATION.md  IMPLEMENTATION_SUMMARY.md  IOS_SE_IMPLEMENTATION_SUMMARY.md  MPC_WALLET_PROGRESS.md  Makefile  Makefile.local  PART1_4_FINAL_REPORT.md  PART1_COMPLETION_SUMMARY.md  PLAN.md  PROJECT_STATUS.md  QUICK_START.md  README.md  cargokit.toml  deploy.sh  docker-compose.prod.yml  docker-compose.yml  docker-start.sh  install-deps.sh  start-local.sh  test-auth-flow.sh
.cargo/: config.toml
.github/: WORKFLOWS.md
.github/workflows/: build.yml  deploy-ecs.yml  deploy-tke.yml  docker-build.yml  flutter-ci.yml  rust-ci.yml
backend/api-server/: Cargo.toml
backend/api-server/src/: errors.rs  main.rs  retry.rs  state.rs
backend/api-server/src/middleware/: audit.rs  auth.rs  metrics.rs  mod.rs  rate_limit.rs  request_id.rs  security_headers.rs  validation.rs
backend/api-server/src/routes/: ai.rs  auth.rs  balance.rs  chains.rs  mod.rs  mpc.rs  mpc_ws.rs  policy.rs  price.rs  push.rs  shards.rs  swap.rs  tx.rs  tx_history.rs  userop.rs  wallets.rs  yield_.rs
backend/api-server/src/services/: ai_executor.rs  chat_store.rs  claude.rs  covalent.rs  crypto.rs  defillama.rs  dex.rs  email.rs  mod.rs  presign_manager.rs  tx_tracker.rs
backend/api-server/src/services/mpc_participant/: mod.rs  shard_store.rs  types.rs
backend/indexer/: Cargo.toml
backend/indexer/src/: main.rs
backend/migrations/: 001_initial_schema.sql  002_audit_logs.sql  003_indexer_state.sql  004_encrypted_shards.sql  005_mpc_missing_columns.sql  006_multi_wallet_presign_ws.sql  007_recovery_sessions.sql  008_tx_history_indexer.sql  009_chat_history.sql  010_mpc_tx_hash.sql  011_push_tokens.sql  012_session_recovery.sql  013_user_policies.sql  014_email_verifications.sql  015_recovery_attempts.sql
backend/mpc-relay/: Cargo.toml
backend/mpc-relay/src/: main.rs
backend/worker/: Cargo.toml
backend/worker/src/: main.rs
crates/ai-bridge/: Cargo.toml
crates/ai-bridge/src/: intent.rs  lib.rs  tools.rs
crates/chain-evm/: Cargo.toml
crates/chain-evm/src/: chains.rs  eip712.rs  gas.rs  lib.rs  signer.rs  tokens.rs  transaction.rs  userop.rs
crates/ffi-mobile/: Cargo.toml
crates/ffi-mobile/src/: api.rs  frb_generated.rs  lib.rs  state.rs  tests.rs
crates/mpc-core/: Cargo.toml
crates/mpc-core/examples/: test_2of2.rs
crates/mpc-core/src/: errors.rs  lib.rs
crates/mpc-core/src/crypto/: commits.rs  curve.rs  hashes.rs  mod.rs  mta.rs  paillier.rs  paillier_proof.rs  proofs.rs  rng.rs  schnorr.rs
crates/mpc-core/src/dkls23/: dkg.rs  mod.rs  presign.rs  protocol.rs  reshare.rs  sign.rs
crates/mpc-core/src/security/: memory.rs  mod.rs
crates/mpc-core/src/shard/: backup.rs  device.rs  encrypt.rs  mod.rs  server.rs
crates/mpc-core/src/transport/: mod.rs  noise.rs  relay.rs
crates/mpc-core/tests/: e2e_protocol_flow.rs  integration.rs
crates/policy-engine/: Cargo.toml
crates/policy-engine/src/: approval.rs  lib.rs  limits.rs  risk.rs  rules.rs  types.rs
crates/storage-crypto/: Cargo.toml
crates/storage-crypto/src/: encrypted_store.rs  keychain.rs  lib.rs
docker/postgres/: sync-password.sh
docs/: API接入实施方案.md  ICLOUD_BACKUP.md  PUSH_NOTIFICATIONS.md  QUICK_START_PUSH.md
k8s/: deployment.yml  kustomization.yml  service.yml
mobile/: BIP39_IMPLEMENTATION.md  README.md  SECURE_HARDWARE_IMPLEMENTATION.md  flutter_rust_bridge.yaml  pubspec.yaml  test_api.dart
mobile/.omc/state/: agent-replay-ad831a6c-7e40-4652-98e7-ae3bb5ded7e0.jsonl  hud-stdin-cache.json  last-tool-error.json  mission-state.json  subagent-tracking.json
mobile/android/app/: build.gradle.kts  google-services.json  google-services.json.example
mobile/ios/: GoogleService-Info.plist  Podfile
mobile/ios/Frameworks/: ffi_mobile.podspec
mobile/ios/Runner/: AppDelegate.swift  CloudBackupHandler.swift  GoogleService-Info.plist.example  Info.plist  MpcSecureEnclave.swift  MpcSecureStorage.swift  google-services.json
mobile/ios/Runner.xcodeproj/: project.pbxproj
mobile/lib/: main.dart
mobile/lib/api/: ai_api.dart  api.dart  auth_api.dart  balance_api.dart  chains_api.dart  common_api.dart  example_usage.dart  mpc_api.dart  policy_api.dart  price_api.dart  shards_api.dart  swap_api.dart  tx_api.dart  tx_history_api.dart  wallet_api.dart  yield_api.dart
mobile/lib/bridge/: ffi.dart  mpc_bridge.dart  noise_bridge.dart
mobile/lib/config/: api_config.dart
mobile/lib/debug/: auth_debug_page.dart
mobile/lib/l10n/: strings.dart
mobile/lib/models/: ai_response.dart  contact.dart  tx_record.dart
mobile/lib/network/: dio_client.dart  mpc_websocket.dart  result.dart
mobile/lib/onboarding/: onboarding_flow.dart
mobile/lib/platform/: android_strongbox_channel.dart  biometrics.dart  biometrics_impl.dart  cloud_backup.dart  ios_se_channel.dart  sb_manager.dart  se_manager.dart  secure_hardware.dart  secure_hardware_example.dart  secure_storage.dart  secure_storage_impl.dart
mobile/lib/router/: app_router.dart
mobile/lib/services/: action_result.dart  backup_shard_service.dart  balance_service.dart  chain_service.dart  contacts_service.dart  gas_service.dart  intent_executor.dart  key_health_service.dart  locator.dart  mpc_session_manager.dart  mpc_session_store.dart  mpc_wallet_service.dart  notification_service.dart  pending_sign_service.dart  policy_service.dart  presign_pool_service.dart  push_service.dart  push_service_example.dart  recovery_service.dart  settings_service.dart  tx_history_service.dart  tx_service.dart  tx_tracker_service.dart  wallet_service.dart
mobile/lib/state/: app_state.dart
mobile/lib/theme/: colors.dart  theme.dart  typography.dart
mobile/test/: widget_test.dart
mobile/web/: index.html  manifest.json
prototype/: index.html
scripts/: build_android.sh  build_ios.sh  generate_bindings.sh
(+2001 files in other folders)
