[package]
name = "indexer"
description = "EVM chain event indexer — log subscription, transaction history"
version.workspace = true
edition.workspace = true

[dependencies]
chain-evm = { path = "../../crates/chain-evm" }
alloy-provider = { workspace = true }
alloy-rpc-types = { workspace = true }
alloy-primitives = { workspace = true }
sqlx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
