[package]
name = "mpc-relay"
description = "NATS-based MPC message relay — session management, message routing"
version.workspace = true
edition.workspace = true

[dependencies]
mpc-core = { path = "../../crates/mpc-core" }
async-nats = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
