[package]
name = "mpc-relay"
description = "NATS-based MPC message relay — session management, message routing"
version.workspace = true
edition.workspace = true

[dependencies]
mpc-core = { path = "../../crates/mpc-core" }
async-nats = { workspace = true }
dashmap = "5.4"
futures = "0.3"
async-stream = "0.3"
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
uuid = { workspace = true, features = ["v4", "serde"] }
bytes = "1.5"
serde_bytes = "0.11"
