[package]
name = "worker"
description = "Background jobs — key resharing scheduler, price feed updates"
version.workspace = true
edition.workspace = true

[dependencies]
mpc-core = { path = "../../crates/mpc-core" }
chain-evm = { path = "../../crates/chain-evm" }
redis = { workspace = true }
sqlx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
