[package]
name = "ai-bridge"
description = "AI integration — local intent classification, Claude Tool definitions"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
regex = "1"
