[package]
name = "ffi-mobile"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["staticlib", "cdylib"]

[dependencies]
mpc-core = { path = "../mpc-core" }
chain-evm = { path = "../chain-evm" }
storage-crypto = { path = "../storage-crypto" }
policy-engine = { path = "../policy-engine" }

flutter_rust_bridge = "=2.12.0"
base64 = { workspace = true }
reqwest = { workspace = true, features = ["json"] }

uuid = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
alloy-primitives = { workspace = true }
alloy-rpc-types = { workspace = true }
hex = { workspace = true }
k256 = { workspace = true }
bincode = "1.3"

[dev-dependencies]
serial_test = "3"
