[package]
name = "mpc-core"
description = "DKLS23 threshold signature scheme — DKG, 2-of-3 TSS, resharing"
version.workspace = true
edition.workspace = true

[dependencies]
k256 = { workspace = true }
elliptic-curve = { workspace = true }
ecdsa = { workspace = true }
aes-gcm = { workspace = true }
argon2 = { workspace = true }
rand = { workspace = true }
sha2 = { workspace = true }
sha3 = { workspace = true }
synedrion = { workspace = true }
zeroize = { workspace = true }
snow = { workspace = true }
async-nats = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
async-trait = "0.1"
chrono = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
criterion = { workspace = true }
tokio = { workspace = true, features = ["test-util"] }
