[package]
name = "policy-engine"
description = "Transaction policy engine — limits, M-of-N approval, risk control"
version.workspace = true
edition.workspace = true

[dependencies]
alloy-primitives = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
