[package]
name = "storage-crypto"
description = "Encrypted local storage and platform keychain integration"
version.workspace = true
edition.workspace = true

[dependencies]
aes-gcm = { workspace = true }
argon2 = { workspace = true }
rand = { workspace = true }
zeroize = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
